Adding another catch loop and trying gc log with pid